--- a/client/MedBook.html
+++ b/client/MedBook.html
@@ -13,7 +13,7 @@
 		   		 
 				</div>
 	 	   	 	<div class="span4">
-
+		   			{{> quickForm collection="Datasets" doc=editingDataset id="updateDatasetsForm" type="update"}}
 				</div>
 			</div>
 		</div>	
